﻿Legend:
! Breaking change
* Compatible change
- Bugfix
+ New feature
===============================================================================

~~~~~~~~~
! v8.0.0:
~~~~~~~~~

! KGySoft.Drawing namespace
===========================
! PixelFormatExtensions class:
  ! GetInfo method: For pixel formats with linear gamma the Prefers128BitColors property is now set in the result.
  + ToPixelFormat method: Supporting the new KnowPixelFormat values of v8.0.0
+ BitmapExtensions class:
  + GetReadableBitmapData/GetWritableBitmapData/GetReadWriteBitmapData methods: They support getting/setting pixels
    using wide colors without quantizing the color information to the 32-bit ARGB color space.


~~~~~~~~~
* v7.2.0:
~~~~~~~~~

* Common changes
================
* Performance improvements, especially for wide pixel formats.
  See also https://github.com/koszeggy/KGySoft.Drawing/blob/master/KGySoft.Drawing.Core/changelog.txt

- KGySoft.Drawing namespace
===========================
- ImageExtensions class:
  - SaveAsIcon: Fixing alpha values when the source image has 32bpp PARGB pixel format.
- PixelFormatExtensions class:
  - GetMatchingQuantizer method: The WorkingColorSpace of the returned quantizer is set to Linear if source pixel
    format uses the linear color space.


~~~~~~~~~
! v7.1.0:
~~~~~~~~~

! Common changes
================
! From now on alpha blending operations on Bitmap instances (eg. DrawInto extensions) are performed in the linear
  color space for 48/64 bpp pixel formats on Windows. To use a specific color space regardless of the pixel format
  obtain a managed bitmap data by the new GetReadableBitmapData/GetWritableBitmapData/GetReadWriteBitmapData
  extension method overloads with WorkingColorSpace parameters and use the platform independent extension methods
  (eg. BitmapDataExtensions from the KGySoft.Drawing.Core package) instead.

+ KGySoft.Drawing namespace
===========================
+ BitmapExtensions class: