@@ -9,14 +9,20 @@
 ! v8.0.0:
 ~~~~~~~~~
 
++ Assembly changes:
+===================
++ Targeting also .NET Framework 4.6 and .NET Standard 2.1
+
 ! KGySoft.Drawing namespace
 ===========================
 ! PixelFormatExtensions class:
   ! GetInfo method: For pixel formats with linear gamma the Prefers128BitColors property is now set in the result.
   + ToPixelFormat method: Supporting the new KnowPixelFormat values of v8.0.0
-+ BitmapExtensions class:
-  + GetReadableBitmapData/GetWritableBitmapData/GetReadWriteBitmapData methods: They support getting/setting pixels
-    using wide colors without quantizing the color information to the 32-bit ARGB color space.
+* BitmapExtensions class:
+  * GetReadableBitmapData/GetWritableBitmapData/GetReadWriteBitmapData methods:
+    + They support getting/setting pixels using wide colors without quantizing the color information to the 32-bit
+      ARGB color space.
+    - Fixing possible errors when the backing buffer of the 48/64 bpp pixel formats contains invalid values.
 
 
 ~~~~~~~~~
